z-index fix

--- a/clean-good/css/main.css
+++ b/clean-good/css/main.css
@@ -532,7 +532,7 @@ a:hover {
     flex-direction: column;
     font-size: 16px;
     gap: 80px;
-    z-index: 11;
+    z-index: 99;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
   }
@@ -556,7 +556,7 @@ a:hover {
     color: #ffffff;
     background-color: transparent;
     cursor: pointer;
-    z-index: 12;
+    z-index: 999;
   }
   .burger::before, .burger::after {
     content: "";
@@ -629,7 +629,7 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(19, 29, 34, 0.7);
-  z-index: 10;
+  z-index: 98;
   opacity: 0;
   -webkit-transition: opacity 0.2s ease-in;
   transition: opacity 0.2s ease-in;
